Crash blender in edit mode(edges) if geometry node have "On cage" #89393

Closed
opened 2021-06-23 20:54:04 +02:00 by Sergey Herr · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-22 21:12, hash: dbc054bb88
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8

Short description of error
1- open file
/ Geometry node modifier have "on cage"/
2- go in edit mode(edges)
3- try do select / box select

Crash_GN_On_Cage.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 466.47 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-22 21:12, hash: `dbc054bb88` Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` **Short description of error** 1- open file */ Geometry node modifier have "on cage"*/ 2- go in edit mode(edges) 3- try do select / box select [Crash_GN_On_Cage.blend](https://archive.blender.org/developer/F10191382/Crash_GN_On_Cage.blend)
Author

Added subscriber: @SergeyHerr

Added subscriber: @SergeyHerr

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

I can reproduce this. Here's the failing assert:

BLI_assert failed: D:\blender-git\blender\source\blender\bmesh\intern/bmesh_mesh.h:70, BM_edge_at_index(), at '(index >= 0) && (index < bm->totedge)'

Stack trace: P2207

I can reproduce this. Here's the failing assert: ``` BLI_assert failed: D:\blender-git\blender\source\blender\bmesh\intern/bmesh_mesh.h:70, BM_edge_at_index(), at '(index >= 0) && (index < bm->totedge)' ``` Stack trace: [P2207](https://archive.blender.org/developer/P2207.txt)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

It seems it's looking for the 13th edge on the input cube, since the evaluated mesh output has no original indices layer. I'm honestly not sure how it even got to this point though, it seems like the nodes modifier should not be able to maintain original indices in the general case, so there should be a check to prevent this earlier?

I'm not very familiar with this area.

It seems it's looking for the 13th edge on the input cube, since the evaluated mesh output has no original indices layer. I'm honestly not sure how it even got to this point though, it seems like the nodes modifier should not be able to maintain original indices in the general case, so there should be a check to prevent this earlier? I'm not very familiar with this area.
Jacques Lucke self-assigned this 2021-07-23 12:12:44 +02:00

This issue was referenced by eb43477851

This issue was referenced by eb434778511070238ec189c8929c9b267842606a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89393
No description provided.